# Da

query_converter/: README.md  example.ipynb  pyproject.toml
query_converter/query_converter/: config.py
query_converter/query_converter/functions/: data_profiling.py  helpers.py  html_parsing.py  transpile.py
query_converter/query_converter/models/: query_response.py
query_converter/query_converter/static/: converter_template.tmpl  style.css
