[project]
name = "query-converter"
version = "0.1.4"
description = ""
authors = [{ name = "Damian Petta", email = "petta.dp@pg.com" }]
readme = "README.md"
requires-python = ">=3.10"


include = ["query_converter/static/*"]

[tool.poetry.dependencies]
python = ">=3.10"
openpyxl = "3.1.5"
sqlglot = { extras = ["rs"], version = "^27.6.0" }
sqlparse = ">=0.5.0"
Jinja2 = "3.1.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
